# raylib-vs-bevy-llm

./: .gitignore  CLAUDE.md  README.md
assets/: atlas_map.txt
terra-c/: .clangd  Makefile  NOTES.md
terra-c/src/: assets.c  assets.h  combat.c  combat.h  entities.c  entities.h  game.h  inventory.c  inventory.h  main.c  mining.c  mining.h  noise.c  noise.h  player.c  player.h  render.c  render.h  world.c  world.h  worldgen.c  worldgen.h
terra-rs/: Cargo.toml  NOTES.md
terra-rs/src/: assets.rs  combat.rs  consts.rs  drops.rs  enemies.rs  hud.rs  inventory.rs  main.rs  mining.rs  noise.rs  particles.rs  player.rs  state.rs  world.rs  worldgen.rs
