[package]
name = "terra-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.19", default-features = false, features = ["2d"] }

[features]
dev = ["bevy/dynamic_linking", "bevy/bevy_dev_tools"]

# Fast iterative builds
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
